affix for object names when importing geometry from one database to 
another.  Primitive selection via the Edit menu is working again
thanks to the fixing of the solid_illum bug. The pipe primitive's
performance problems during raytracing, due to unnecessary memory
allocations, are now fixed.  The extrude primitive's handling of 
invalid geometry is now more robust.

* fixed error in parsing remotefb location specification - S. Morrison
* add w option to tire to allow disabling wheel generation - C. Yapp
* tweak tread 2 in tire tool; avoid artifacts on tread wall - C. Yapp
* fixed mged 'dbconcat' hang when not specifying an affix - Bob Parker
* fixed primitive selection solid_illum bug in mged - Bob Parker
* fix bug in tire tool's geometry causing 'nicks' in tread - C. Yapp
* increased raytrace performace of pipe primitive - John Anderson
* fixed bugs handling invalid extrude objects - Sean Morrison
* fixed dependency bug in library pkg-config files - Sean Morrison
* platform installers use consistent naming conventions- Sean Morrison
* added new -c character option to the loop command - Dawn Thomas
* tire now checks for files instead of overwriting - Cliff Yapp
* add new nirt formatting options, -L listing option - C. Yapp
* fixed nirt's dest cmd's handling of file name string - Cliff Yapp
* modified mged nirt command to include air in results - Bob Parker

----------------------------------------------------------------------
--- 2008-05-29  Release 7.12.4                                     ---
----------------------------------------------------------------------

This release contains numerous enhancements to MGED's mirror command,
now with the ability to mirror an object across arbitrary vectors or
points along a standard axis.  Additionally, nirt now has a new "gap"
option for reporting the empty spaces between objects on a given
shotline with additional formatting options under development.
